# project

./: .gitignore  Dockerfile  compose.yaml  init.sql  pyproject.toml
app/: crud.py  db_init.py  log_settings.py  main.py  models.py  redis_conn.py  schemas.py  utils.py
app/routes/: category.py  page.py  parcel.py
app/static/: home_styles.css  parcel_details_styles.css  register_styles.css  styles_parcel.css
app/templates/: categories.html  home.html  parcel_details.html  parcels.html  register_parcel.html
redisdata/: dump.rdb
redisdata/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
worker/: Dockerfile  main.py  pyproject.toml
