[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.8"
pika = "^1.3.2"
requests = "^2.32.3"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
